adding mean, var and std

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1566,11 @@
     "    \n",
     "    else:\n",
     "        print('\\tHá evidências para rejeitar a hipótese nula (p-val: {:.2f}).'.format(media_pval))\n",
-    "        print('\\tÉ possível afirmar que as médias são diferentes.')"
+    "        print('\\tÉ possível afirmar que as médias são diferentes.')\n",
+    "\n",
+    "    print('\\nGrupo\\tMédia\\tVar\\tDesvio')\n",
+    "    print('A\\t{:.2f}\\t{:.2f}\\t{:.2f}'.format(a.mean(), a.var(), a.std()))\n",
+    "    print('B\\t{:.2f}\\t{:.2f}\\t{:.2f}'.format(b.mean(), b.var(), b.std()))"
    ]
   },
   {
@@ -1585,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1602,11 @@
       "\n",
       "Teste de T Student:\n",
       "\tHá evidências para rejeitar a hipótese nula (p-val: 0.00).\n",
-      "\tÉ possível afirmar que as médias são diferentes.\n"
+      "\tÉ possível afirmar que as médias são diferentes.\n",
+      "\n",
+      "Grupo\tMédia\tVar\tDesvio\n",
+      "A\t35.15\t29.44\t5.43\n",
+      "B\t18.09\t15.62\t3.95\n"
      ]
     }
    ],
@@ -1624,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1645,11 @@
       "\n",
       "Teste de T Student:\n",
       "\tNão há evidências para rejeitar a hipótese nula (p-val: 0.40).\n",
-      "\tNão é possível afirmar que as médias são diferentes.\n"
+      "\tNão é possível afirmar que as médias são diferentes.\n",
+      "\n",
+      "Grupo\tMédia\tVar\tDesvio\n",
+      "A\t18.64\t23.87\t4.89\n",
+      "B\t17.52\t22.81\t4.78\n"
      ]
     }
    ],
@@ -1663,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1688,11 @@
       "\n",
       "Teste de T Student:\n",
       "\tHá evidências para rejeitar a hipótese nula (p-val: 0.02).\n",
-      "\tÉ possível afirmar que as médias são diferentes.\n"
+      "\tÉ possível afirmar que as médias são diferentes.\n",
+      "\n",
+      "Grupo\tMédia\tVar\tDesvio\n",
+      "A\t18.78\t17.47\t4.18\n",
+      "B\t15.94\t19.36\t4.40\n"
      ]
     }
    ],
@@ -1716,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1741,7 @@
        "0.43261258562841437"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1764,7 @@
        "0.23549838361681327"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1787,7 @@
        "0.11995849134364218"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
